Initial commit from script

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="/assets/logo.png"/>
     <link rel="stylesheet" href="/css/tablet.css" media="(min-width: 426px)"/>
     <link rel="stylesheet" href="/css/desktop.css" media="(min-width: 769px)"/>
-    <title>Confercciones CB</title>
+    <title>Venta de mercado</title>
 </head>
 <body>
     <header class="nav-container">
@@ -51,8 +51,7 @@
         <section class="hero">
             <div class="hero-title">
                 <div>
-                    <h1>Confercciones CB</h1>
-                    <h2>Fabricando con amor.</h2>
+                    <h1>Venta de mercado</h1>
                 </div>
             </div>
 
@@ -115,13 +114,13 @@
         <section id="aboutus" class="about-us">
             <div class="about-us-text">
                 <h2>Sobre nosotros</h2>
-                <p>Confecciones CB se dedica a la creación de prendas que destacan por su calidad y cuidado en cada detalle. Nuestra filosofía es sencilla: fabricar con amor para ofrecer ropa que no solo sea atractiva, sino que también ofrezca comodidad y durabilidad a quienes la visten.</p>
+                <p>El Vendedor Informal se dedica a ofrecer una variedad de productos frescos y esenciales, brindando a nuestros clientes una opción conveniente y accesible directamente desde el mercado. Desde nuestros inicios, hemos trabajado para proporcionar una alternativa que combine calidad y flexibilidad, adaptándonos a las necesidades diarias de nuestros compradores.</p>
 
-                <p>En Confecciones CB, utilizamos los mejores materiales y técnicas de confección avanzadas para garantizar que cada pieza cumpla con los más altos estándares. Nos esforzamos por que cada prenda refleje nuestra pasión por la moda y nuestro compromiso con la satisfacción del cliente.</p>
+                <p>En El Vendedor Informal, nos enorgullece ofrecer productos como frutas, verduras y otros artículos básicos, seleccionados cuidadosamente para asegurar frescura y buen sabor. Nuestro enfoque es proporcionar un servicio personalizado y cercano, permitiendo a nuestros clientes disfrutar de una experiencia de compra que sea tanto eficiente como amigable.</p>
 
-                <p>Nuestras colecciones abarcan una amplia gama de estilos, desde ropa casual hasta atuendos más formales, siempre con un enfoque en la calidad y el confort. Cada prenda es elaborada con esmero, asegurando que sea tanto funcional como elegante, ideal para diversas ocasiones.</p>
+                <p>Nos dedicamos a servir a nuestra comunidad con un compromiso hacia la calidad y la satisfacción del cliente. Cada producto que ofrecemos está pensado para cumplir con los estándares más altos, mientras mantenemos un trato directo y accesible.</p>
 
-                <p>Confecciones CB: Fabricando con amor. Descubre cómo nuestras prendas pueden transformar tu guardarropa, ofreciéndote piezas que se sienten tan bien como se ven, hechas con el corazón y diseñadas para durar.</p>
+                <p>El Vendedor Informal: Tu opción para productos frescos y de calidad, con el servicio personalizado que buscas. Ven y descubre cómo podemos hacer que tus compras sean más fáciles y satisfactorias, ofreciendo lo mejor del mercado a tu alcance.</p>
             </div>
             <div class="about-us-img">
                 <img src="./assets/img.jpg" alt="">
@@ -148,7 +147,7 @@
                     Si necesitas más información o quieres contratar alguno de nuestros servicios, no dudes en contactarnos. Estamos disponibles para resolver tus dudas y brindarte la mejor atención.
 
                     Haz clic en el botón de abajo para comunicarte con nosotros directamente a través de WhatsApp. ¡Estamos a solo un mensaje de distancia!.</p>
-                <a href="https://wa.link/4vuzei"><button>Contactanos por whatsapp</button></a>
+                <a href="https://wa.link/tn0ujs"><button>Contactanos por whatsapp</button></a>
             </div>
         </section>
 
@@ -160,15 +159,15 @@
             <h3>Siguenos</h3>
             <div class="social-icons">
                 <a href="https://www.instagram.com"><img src="/assets/logotipo-de-instagram.png" alt=""></a>
-                <a href="https://www.facebook.com/profile.php?id=61566249565914&mibextid=ZbWKwL"><img src="/assets/facebook.png" alt=""></a>
+                <a href="https://www.facebook.com/profile.php?id=61565192085605"><img src="/assets/facebook.png" alt=""></a>
                 <a href="https://www.tiktok.com"><img src="/assets/tik-tok.png" alt=""></a>
-                <a href="https://wa.link/4vuzei"><img src="/assets/whatsapp.png" alt=""></a>
+                <a href="https://wa.link/tn0ujs"><img src="/assets/whatsapp.png" alt=""></a>
             </div>
         </div>
 
         <div class="number">
-            <p>(+57)313-324-9826</p>
-            <p>Conchis25@hotmail.com</p>
+            <p>(+57)315-240-7007</p>
+            <p>luzdaryhenaoyepes@gmail.com</p>
         </div>
 
         <div class="logo-footer">
