--- a/index.html
+++ b/index.html
@@ -114,13 +114,13 @@
         <section id="aboutus" class="about-us">
             <div class="about-us-text">
                 <h2>Sobre nosotros</h2>
-                <p>El Vendedor Informal se dedica a ofrecer una variedad de productos frescos y esenciales, brindando a nuestros clientes una opción conveniente y accesible directamente desde el mercado. Desde nuestros inicios, hemos trabajado para proporcionar una alternativa que combine calidad y flexibilidad, adaptándonos a las necesidades diarias de nuestros compradores.</p>
+                <p>En venta de mercado nos dedicamos a ofrecer una variedad de productos frescos y esenciales, brindando a nuestros clientes una opción conveniente y accesible directamente desde el mercado. Desde nuestros inicios, hemos trabajado para proporcionar una alternativa que combine calidad y flexibilidad, adaptándonos a las necesidades diarias de nuestros compradores.</p>
 
-                <p>En El Vendedor Informal, nos enorgullece ofrecer productos como frutas, verduras y otros artículos básicos, seleccionados cuidadosamente para asegurar frescura y buen sabor. Nuestro enfoque es proporcionar un servicio personalizado y cercano, permitiendo a nuestros clientes disfrutar de una experiencia de compra que sea tanto eficiente como amigable.</p>
+                <p>En venta de mercado, nos enorgullece ofrecer productos como frutas, verduras y otros artículos básicos, seleccionados cuidadosamente para asegurar frescura y buen sabor. Nuestro enfoque es proporcionar un servicio personalizado y cercano, permitiendo a nuestros clientes disfrutar de una experiencia de compra que sea tanto eficiente como amigable.</p>
 
                 <p>Nos dedicamos a servir a nuestra comunidad con un compromiso hacia la calidad y la satisfacción del cliente. Cada producto que ofrecemos está pensado para cumplir con los estándares más altos, mientras mantenemos un trato directo y accesible.</p>
 
-                <p>El Vendedor Informal: Tu opción para productos frescos y de calidad, con el servicio personalizado que buscas. Ven y descubre cómo podemos hacer que tus compras sean más fáciles y satisfactorias, ofreciendo lo mejor del mercado a tu alcance.</p>
+                <p>En venta de mercado: Tu opción para productos frescos y de calidad, con el servicio personalizado que buscas. Ven y descubre cómo podemos hacer que tus compras sean más fáciles y satisfactorias, ofreciendo lo mejor del mercado a tu alcance.</p>
             </div>
             <div class="about-us-img">
                 <img src="./assets/img.jpg" alt="">
